
syntax = "proto3";

package hello.v1;
//import "google/api/annotations.proto";

service hello{
rpc sayHello(HelloRequest) returns (HelloResponse){
    // option (google.api.http) = {
    //         post: "/hello/sayhello"
    //         body: "*"
    //     };
}
}

message HelloRequest{
    string message=1;
}
message HelloResponse{
    string response_message=1;
}